# mtp_lr_11

./: .gitignore  PROMPT_LOG.md  README.md
.github/workflows/: main.yml
Task1/: .dockerignore  09_hard.py  Dockerfile  main.py  requirements.txt  test_main.py
Task3/: .dockerignore  Cargo.toml  Dockerfile  README.md
Task3/src/: lib.rs  main.rs
Task3/tests/: integration.rs
Task9/: README.md  docker-compose.yml
Task_hard1/: .dockerignore  Dockerfile  README.md  main.go  main_test.go
Task_hard3/: README.md
